--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -13,6 +13,7 @@
         android:layout_height="0dp"
         android:paddingTop="8dp"
         android:clipToPadding="false"
+        android:layoutAnimation="@anim/recyclerview_anim"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
