--- a/app/src/main/res/menu/list_fragment_menu.xml
+++ b/app/src/main/res/menu/list_fragment_menu.xml
@@ -4,11 +4,11 @@
 
     <item
         android:id="@+id/menu_search"
-        android:title="@string/search"
         android:icon="@drawable/ic_search"
         android:iconTint="@color/white"
-        app:showAsAction="ifRoom"
-        app:actionViewClass="androidx.appcompat.widget.SearchView" />
+        android:title="@string/search"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="ifRoom" />
 
     <group android:checkableBehavior="single">
         <item
@@ -17,10 +17,10 @@
             <menu>
                 <item
                     android:id="@+id/menu_priority_high"
-                    android:title="@string/priority_high"/>
+                    android:title="@string/priority_high" />
                 <item
                     android:id="@+id/menu_priority_low"
-                    android:title="@string/priority_low"/>
+                    android:title="@string/priority_low" />
             </menu>
 
         </item>
@@ -29,6 +29,6 @@
     <item
         android:id="@+id/menu_delete_all"
         android:title="@string/delete_all"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
 
 </menu>
