--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -18,7 +18,7 @@
         android:hint="@string/title"
         android:paddingStart="24dp"
         android:paddingEnd="24dp"
-        android:background="@android:color/transparent"
+        android:background="@drawable/custom_input"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:background="@android:color/transparent"
+        android:background="@drawable/custom_input"
         android:gravity="top|start"
         android:hint="@string/description"
         android:paddingStart="24dp"
