--- a/app/src/main/res/menu/list_fragment_menu.xml
+++ b/app/src/main/res/menu/list_fragment_menu.xml
@@ -21,6 +21,9 @@
                 <item
                     android:id="@+id/menu_priority_low"
                     android:title="@string/priority_low" />
+                <item
+                    android:id="@+id/menu_reset"
+                    android:title="@string/reset"/>
             </menu>
 
         </item>
